--- a/argocd/infra/apps/loki.yaml
+++ b/argocd/infra/apps/loki.yaml
@@ -8,35 +8,18 @@ spec:
   source:
     chart: loki
     repoURL: https://grafana.github.io/helm-charts
-    targetRevision: 5.41.0
+    targetRevision: 6.27.0
     helm:
       values: |
-        mode: monolithic
-        auth_enabled: false
-        monitoring:
-          selfMonitoring:
-            enabled: false
-          lokiCanary:
-            enabled: false
+        deploymentMode: single
+        loki:
+          auth_enabled: false
+          storage:
+            type: filesystem
         persistence:
           enabled: true
           size: 30Gi
           storageClassName: synology-loki
-        config:
-          storage_config:
-            filesystem:
-              directory: /data/loki
-          schema_config:
-            configs:
-              - from: 2020-10-24
-                store: boltdb-shipper
-                object_store: filesystem
-                schema: v11
-                index:
-                  prefix: index_
-                  period: 24h
-        test:
-          enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
