--- a/argocd/bootstrap/install.yaml
+++ b/argocd/bootstrap/install.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -8,7 +9,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://your-git-repo-url.git
+    repoURL: https://github.com/jsmithgh/argocd.git
     path: argocd/bootstrap
     targetRevision: main # Branch name
     helm:
