--- a/argocd/bootstrap/install.yaml
+++ b/argocd/bootstrap/install.yaml
@@ -11,10 +11,7 @@ spec:
   source:
     repoURL: https://github.com/jsmithgh/argocd.git
     path: argocd/bootstrap
-    targetRevision: main # Branch name
-    helm:
-      valueFiles:
-        - values-ha.yaml
+    targetRevision: main
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
