--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -26,6 +26,7 @@ spec:
             enabled: true
             size: 30Gi
             storageClassName: synology-loki
+            name: storage
             accessMode: ReadWriteOnce
         monitoring:
           serviceMonitor:
