storageclassname to storageclass for loki

--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -25,7 +25,7 @@ spec:
           persistence:
             enabled: true
             size: 30Gi
-            storageClassName: synology-loki
+            storageClass: synology-loki
             name: storage
             accessMode: ReadWriteOnce
         monitoring:
