--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -21,6 +21,10 @@ spec:
           limits_config:
             retention_period: 30d
         singleBinary:
+          readinessProbe:
+            initialDelaySeconds: 120
+            timeoutSeconds: 5
+            periodSeconds: 15
           replicas: 1
           persistence:
             enabled: true
