--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -20,6 +20,7 @@ spec:
             replication_factor: 1
           limits_config:
             retention_period: 30d
+        deploymentMode: SingleBinary
         singleBinary:
           readinessProbe:
             initialDelaySeconds: 120
@@ -32,6 +33,8 @@ spec:
             storageClass: synology-loki
             name: storage
             accessMode: ReadWriteOnce
+        simpleScalable:
+          enabled: false
         monitoring:
           serviceMonitor:
             enabled: true
