resources:           requests:             memory: 2Gi

--- a/argocd/infrastructure-apps/base/minio.yaml
+++ b/argocd/infrastructure-apps/base/minio.yaml
@@ -16,6 +16,9 @@ spec:
           enabled: true
           size: 50Gi
           storageClass: synology-loki
+        resources:
+          requests:
+            memory: 2Gi
         buckets:
           - name: loki-data
             policy: none
