--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -11,22 +11,17 @@ spec:
     targetRevision: 6.28.0
     helm:
       values: |
+        # Use test schema for simplicity
         loki:
+          useTestSchema: true
           auth_enabled: false
           commonConfig:
             replication_factor: 2
-          limitsConfig:
+          # Explicitly set limits config as a whole object
+          limits_config:
             retention_period: 30d
-            allow_structured_metadata: false  # Disable structured metadata to work with v11 schema
-          schemaConfig:
-            configs:
-              - from: "2020-10-24"
-                store: boltdb-shipper
-                object_store: s3
-                schema: v11
-                index:
-                  prefix: index_
-                  period: 24h
+            allow_structured_metadata: false
+          # Configure storage
           storage:
             bucketNames:
               chunks: loki-data
@@ -41,6 +36,11 @@ spec:
               signatureVersion: v4
               s3ForcePathStyle: true
               insecure: true
+
+        # Add explicit CLI arguments to all components
+        extraArgs:
+          all:
+            - "-validation.allow-structured-metadata=false"
 
         gateway:
           enabled: true
@@ -79,8 +79,6 @@ spec:
             enabled: true
           selfMonitoring:
             enabled: false
-            grafanaAgent:
-              installOperator: false
           lokiCanary:
             enabled: false
           rules:
