--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -11,17 +11,18 @@ spec:
     targetRevision: 6.28.0
     helm:
       values: |
-        # Use test schema for simplicity
+        # Force only 1 replica for all components
+        global:
+          replicas: 1
+
         loki:
           useTestSchema: true
           auth_enabled: false
           commonConfig:
-            replication_factor: 2
-          # Explicitly set limits config as a whole object
+            replication_factor: 1  # Changed to 1 to match replica count
           limits_config:
             retention_period: 30d
             allow_structured_metadata: false
-          # Configure storage
           storage:
             bucketNames:
               chunks: loki-data
@@ -37,13 +38,13 @@ spec:
               s3ForcePathStyle: true
               insecure: true
 
-        # Add explicit CLI arguments to all components
         extraArgs:
           all:
             - "-validation.allow-structured-metadata=false"
 
         gateway:
           enabled: true
+          replicas: 1
 
         deploymentMode: SimpleScalable
 
@@ -55,6 +56,9 @@ spec:
 
           backend:
             replicas: 1
+            # Force single instance
+            affinity: null
+            podAntiAffinity: null
             persistence:
               enabled: true
               size: 10Gi
@@ -69,6 +73,9 @@ spec:
 
           write:
             replicas: 1
+            # Force single instance
+            affinity: null
+            podAntiAffinity: null
             persistence:
               enabled: true
               size: 20Gi
@@ -80,7 +87,7 @@ spec:
           selfMonitoring:
             enabled: false
           lokiCanary:
-            enabled: false
+            enabled: false  # Explicitly disable canary
           rules:
             enabled: false
 
@@ -96,3 +103,4 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+      - Force=true  # Added force option to ensure full refresh
