--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -63,6 +63,7 @@ spec:
               enabled: true
               size: 10Gi
               storageClass: synology-loki
+              accessMode: ReadWriteOnce
 
           read:
             replicas: 1
@@ -70,6 +71,7 @@ spec:
               enabled: true
               size: 5Gi
               storageClass: synology-loki
+              accessMode: ReadWriteOnce
 
           write:
             replicas: 1
@@ -80,6 +82,7 @@ spec:
               enabled: true
               size: 20Gi
               storageClass: synology-loki
+              accessMode: ReadWriteOnce
 
         monitoring:
           serviceMonitor:
@@ -103,4 +106,4 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
-      - Force=true  # Added force option to ensure full refresh
+      - Force=true # Added force option to ensure full refresh
