--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -3,107 +3,69 @@ kind: Application
 metadata:
   name: loki
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
     chart: loki
     repoURL: https://grafana.github.io/helm-charts
-    targetRevision: 6.28.0
+    targetRevision: 5.48.0
     helm:
       values: |
-        # Force only 1 replica for all components
-        global:
-          replicas: 1
-
         loki:
-          useTestSchema: true
-          auth_enabled: false
           commonConfig:
-            replication_factor: 1  # Changed to 1 to match replica count
-          limits_config:
-            retention_period: 30d
-            allow_structured_metadata: false
+            replication_factor: 1
           storage:
-            bucketNames:
-              chunks: loki-data
-              ruler: loki-ruler
-              admin: loki-admin
-            s3:
-              s3: null
-              endpoint: minio.monitoring.svc.cluster.local:9000
-              region: us-east-1
-              secretAccessKey: minioadmin
-              accessKeyId: minioadmin
-              signatureVersion: v4
-              s3ForcePathStyle: true
-              insecure: true
-
-        extraArgs:
-          all:
-            - "-validation.allow-structured-metadata=false"
-
-        gateway:
-          enabled: true
-          replicas: 1
-
-        deploymentMode: SimpleScalable
+            type: filesystem
+          persistence:
+            enabled: true
+            storageClass: synology-loki
+            accessMode: ReadWriteOnce
+            size: 20Gi
 
         singleBinary:
-          replicas: 0
+          replicas: 1
 
-        simpleScalable:
+        # If you're using the microservices mode, uncomment and adjust the following section
+        # instead of using singleBinary
+        # gateway:
+        #   enabled: true
+        #
+        # distributor:
+        #   replicas: 1
+        #
+        # ingester:
+        #   replicas: 1
+        #   persistence:
+        #     enabled: true
+        #     storageClass: synology-loki
+        #     accessMode: ReadWriteOnce
+        #     size: 10Gi
+        #
+        # querier:
+        #   replicas: 1
+        #
+        # queryFrontend:
+        #   replicas: 1
+
+        serviceMonitor:
           enabled: true
 
-          backend:
-            replicas: 1
-            # Force single instance
-            affinity: null
-            podAntiAffinity: null
-            persistence:
-              enabled: true
-              size: 10Gi
-              storageClass: synology-loki
-              accessMode: ReadWriteOnce
+        dashboards:
+          enabled: true
 
-          read:
-            replicas: 1
-            persistence:
-              enabled: true
-              size: 5Gi
-              storageClass: synology-loki
-              accessMode: ReadWriteOnce
+        config:
+          limits_config:
+            retention_period: 168h  # 7 days
 
-          write:
-            replicas: 1
-            # Force single instance
-            affinity: null
-            podAntiAffinity: null
-            persistence:
-              enabled: true
-              size: 20Gi
-              storageClass: synology-loki
-              accessMode: ReadWriteOnce
-
-        monitoring:
-          serviceMonitor:
-            enabled: true
-          selfMonitoring:
-            enabled: false
-          lokiCanary:
-            enabled: false
-          rules:
-            enabled: false
-
-        test:
-          enabled: false
   destination:
     server: https://kubernetes.default.svc
-    namespace: monitoring
+    namespace: observability
+
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - ServerSideApply=true
-      - Force=true # Added force option to ensure full refresh
