--- a/argocd/infrastructure-apps/base/loki.yaml
+++ b/argocd/infrastructure-apps/base/loki.yaml
@@ -13,24 +13,41 @@ spec:
       values: |
         loki:
           auth_enabled: false
-          commonConfig:
-            replication_factor: 1
           storage:
             type: filesystem
+          commonConfig:
+            path_prefix: /var/loki
+            replication_factor: 1
+          limits_config:
+            retention_period: 30d
+        singleBinary:
+          readinessProbe:
+            initialDelaySeconds: 120
+            timeoutSeconds: 5
+            periodSeconds: 15
+          replicas: 1
           persistence:
             enabled: true
+            size: 30Gi
             storageClass: synology-loki
+            name: storage
             accessMode: ReadWriteOnce
-            size: 10Gi
-          config: |
-            limits_config:
-              retention_period: 360h
-        singleBinary:
-          replicas: 1
-        serviceMonitor:
-          enabled: true
-        dashboards:
-          enabled: true
+        monitoring:
+          serviceMonitor:
+            enabled: true
+          selfMonitoring:
+            enabled: false
+            grafanaAgent:
+              installOperator: false
+          lokiCanary:
+            enabled: false
+          rules:
+            enabled: false
+        gateway:
+          enabled: false
+        test:
+          enabled: false
+
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
@@ -40,3 +57,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
