--- a/argocd/application-apps/application-apps.yaml
+++ b/argocd/application-apps/application-apps.yaml
@@ -1,13 +1,14 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: applications
+  name: application-apps
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/jsmithgh/argocd.git
-    path: argocd/applications/apps
+    path: argocd/application-apps/apps
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
