--- a/argocd/application-apps/base/minecraft.yaml
+++ b/argocd/application-apps/base/minecraft.yaml
@@ -25,6 +25,7 @@ spec:
           dataDir:
             enabled: true
             size: 5Gi
+            storageClass: "local-path"
 
         service:
           type: LoadBalancer
