--- a/argocd/infrastructure-apps/base/longhorn.yaml
+++ b/argocd/infrastructure-apps/base/longhorn.yaml
@@ -14,6 +14,10 @@ spec:
         values: |
           preUpgradeChecker:
             jobEnabled: false
+          persistence:
+            defaultClassReplicaCount: 1
+          csi:
+            kubeletRootDir: /var/lib/kubelet
   destination:
     server: https://kubernetes.default.svc
     namespace: longhorn-system
