--- a/argocd/infrastructure-apps/base/longhorn.yaml
+++ b/argocd/infrastructure-apps/base/longhorn.yaml
@@ -14,8 +14,8 @@ spec:
         values: |
           preUpgradeChecker:
             jobEnabled: false
-          persistence:
-            defaultClassReplicaCount: 1
+          priorityClass:
+            create: true
           csi:
             kubeletRootDir: /var/lib/kubelet
   destination:
