priorityClass:             create: false

--- a/argocd/infrastructure-apps/base/longhorn.yaml
+++ b/argocd/infrastructure-apps/base/longhorn.yaml
@@ -15,7 +15,7 @@ spec:
           preUpgradeChecker:
             jobEnabled: false
           priorityClass:
-            create: true
+            create: false
           csi:
             kubeletRootDir: /var/lib/kubelet
   destination:
