--- a/argocd/infrastructure-apps/base/longhorn.yaml
+++ b/argocd/infrastructure-apps/base/longhorn.yaml
@@ -12,10 +12,12 @@ spec:
       targetRevision: v1.8.1
       helm:
         values: |
+          priorityClass:
+            create: true
+            name: longhorn-critical
+            value: 1000000
           preUpgradeChecker:
             jobEnabled: false
-          priorityClass:
-            create: false
           csi:
             kubeletRootDir: /var/lib/kubelet
   destination:
