enabled transformationsVariableSupport grafana

--- a/argocd/infrastructure-apps/base/kube-prometheus-stack.yaml
+++ b/argocd/infrastructure-apps/base/kube-prometheus-stack.yaml
@@ -13,6 +13,9 @@ spec:
       skipCrds: true
       values: |
         grafana:
+          grafana.ini:
+            feature_toggles:
+              transformationsVariableSupport: true
           service:
             type: LoadBalancer
           persistence:
