external secrets operator resource limits added

--- a/argocd/infrastructure-apps/base/external-secrets.yaml
+++ b/argocd/infrastructure-apps/base/external-secrets.yaml
@@ -9,6 +9,36 @@ spec:
     - chart: external-secrets
       repoURL: https://charts.external-secrets.io
       targetRevision: 0.9.11
+  helm:
+        values: |
+          # Main controller resources
+          resources:
+            requests:
+              cpu: 50m
+              memory: 64Mi
+            limits:
+              cpu: 100m
+              memory: 128Mi
+
+          # Webhook resources
+          webhook:
+            resources:
+              requests:
+                cpu: 50m
+                memory: 64Mi
+              limits:
+                cpu: 100m
+                memory: 128Mi
+
+          # Cert controller resources
+          certController:
+            resources:
+              requests:
+                cpu: 50m
+                memory: 64Mi
+              limits:
+                cpu: 100m
+                memory: 128Mi
   destination:
     server: https://kubernetes.default.svc
     namespace: external-secrets
