changed external-secrets-operator to external-secrets

--- a/apps/external-secrets.yaml
+++ b/apps/external-secrets.yaml
@@ -2,14 +2,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-secrets-operator
+  name: external-secrets
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/jsmithgh/argocd
     targetRevision: main
-    path: external-secrets-operator
+    path: external-secrets
   destination:
     server: https://kubernetes.default.svc
     namespace: external-secrets
