--- a/external-secrets/install.yaml
+++ b/external-secrets/install.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  sources:
-    - chart: external-secrets
+  source:
+      chart: external-secrets
       repoURL: https://charts.external-secrets.io
       targetRevision: 0.20.4
-  helm:
+      helm:
         values: |
           # Main controller resources
           resources:
