--- a/external-secrets/install.yaml
+++ b/external-secrets/install.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-secrets
+  name: external-secrets-operator
   namespace: argocd
 spec:
   project: default
   source:
       chart: external-secrets
       repoURL: https://charts.external-secrets.io
-      targetRevision: 0.20.1
+      targetRevision: 0.20.4
       helm:
         values: |
           # Main controller resources
