--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -32,6 +32,12 @@ spec:
             storageClass: synology-loki
             name: storage
             accessMode: ReadWriteOnce
+        read:
+          replicas: 0
+        write:
+          replicas: 0
+        backend:
+          replicas: 0
         monitoring:
           serviceMonitor:
             enabled: true
