--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -18,6 +18,15 @@ spec:
           commonConfig:
             path_prefix: /var/loki
             replication_factor: 1
+          schemaConfig:
+            configs:
+              - from: 2024-04-01
+                store: tsdb
+                object_store: filesystem
+                schema: v13
+                index:
+                  prefix: loki_index_
+                  period: 24h
           limits_config:
             retention_period: 30d
         singleBinary:
