--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -67,9 +67,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: monitoring
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    #automated:
+      #prune: true
+      #selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
