--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -13,6 +13,7 @@ spec:
       values: |
         loki:
           auth_enabled: false
+          deploymentMode: SingleBinary
           storage:
             type: filesystem
           commonConfig:
