--- a/z_argocd_old/infrastructure-apps/base/loki.yaml
+++ b/z_argocd_old/infrastructure-apps/base/loki.yaml
@@ -13,11 +13,21 @@ spec:
       values: |
         loki:
           auth_enabled: false
+          deploymentMode: SingleBinary
           storage:
             type: filesystem
           commonConfig:
             path_prefix: /var/loki
             replication_factor: 1
+          schemaConfig:
+            configs:
+              - from: 2024-04-01
+                store: tsdb
+                object_store: filesystem
+                schema: v13
+                index:
+                  prefix: loki_index_
+                  period: 24h
           limits_config:
             retention_period: 30d
         singleBinary:
@@ -32,6 +42,12 @@ spec:
             storageClass: synology-loki
             name: storage
             accessMode: ReadWriteOnce
+        read:
+          replicas: 0
+        write:
+          replicas: 0
+        backend:
+          replicas: 0
         monitoring:
           serviceMonitor:
             enabled: true
@@ -52,9 +68,9 @@ spec:
     server: https://kubernetes.default.svc
     namespace: monitoring
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    #automated:
+      #prune: true
+      #selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
